--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -5,146 +5,200 @@ Hello:
   description: Desktop vanity mirror
   price: 200
   category: cute
+  user: maria
 
 Cinnamon:
   title: Cinnamon Roll Lamp
   description: Moon led lamp
   price: 300
   category: cute
+  user: maria
 
 lamp:
     title: Plush
     description: plush toy
     price: 100
     category: cute
-driver2:
-  title: Driver 2 para ps1
-  description: Como nuevo en su caja y con instrucciones
-  price: 25
-  category: videogames
+    user: paco
 
 ps5:
-  title: PS5 nueva sin lector
-  description: A estrenar, usada solo dos veces.
-  price: 650
-  category: videogames
-
-gameboy:
-  title: Game Boy Color
-  description: Con su caja. Color morada transparente.
+  title: PS5
+  description: PS4 en buen estado
   price: 150
   category: videogames
+  user: pepe
 
-air:
-  title: Macbook Air
-  description: Le falla la batería
-  price: 250
-  category: computers
+  switch:
+    title: Nintendo Switch
+    description: Le falla el lector de tarjeta SD
+    price: 195
+    category: videogames
+    user: pepe
 
-imac:
-  title: iMac 27" 2015
-  description: i5 con 8gb de ram y SSD
-  price: 90
-  category: computers
+  nintendo64:
+    title: Nintendo 64 en buen estado
+    description: Con su caja, solo tiene algún pequeño arañazo
+    price: 190
+    category: videogames
+    user: maria
 
-ryzen:
-  title: Ryzen 5950x
-  description: Sin estrenar precintado como nuevo
-  price: 590
-  category: computers
+  megadrive:
+    title: Sega Megadrive
+    description: Funciona perfectamente, solo consola
+    price: 90
+    category: videogames
+    user: maria
 
-nvidia:
-  title: Nvidia 3090ti
-  description: Solo usada 3 meses la vendo porque no la uso
-  price: 1500
-  category: computers
+  driver2:
+    title: Driver 2 para ps1
+    description: Como nuevo en su caja y con instrucciones
+    price: 25
+    category: videogames
+    user: paco
 
-ram:
-  title: 16GB Ram DDR4 3200mhz
-  description: Funciona perfectamente
-  price: 95
-  category: computers
+  ps5:
+    title: PS5 nueva sin lector
+    description: A estrenar, usada solo dos veces.
+    price: 650
+    category: videogames
+    user: paco
 
-renault:
-  title: Renault Clio 2009
-  description: 85000km, 95cv
-  price: 4500
-  category: cars
+  gameboy:
+    title: Game Boy Color
+    description: Con su caja. Color morada transparente.
+    price: 150
+    category: videogames
+    user: pepe
 
-seat:
-  title: Seat Panda clásico
-  description: Tan solo 90000km, 75cv. Del año 1980
-  price: 5500
-  category: cars
+  air:
+    title: Macbook Air
+    description: Le falla la batería
+    price: 250
+    category: computers
+    user: paco
 
-michael:
-  title: Vinilo Michael Jackson Thriller
-  description: Como nuevo a estrenar
-  price: 45
-  category: music
+  imac:
+    title: iMac 27" 2015
+    description: i5 con 8gb de ram y SSD
+    price: 90
+    category: computers
+    user: maria
 
-queen:
-  title: Vinilo Queen
-  description: Ligeras marcas de uso de los años 80
-  price: 35
-  category: music
+  ryzen:
+    title: Ryzen 5950x
+    description: Sin estrenar precintado como nuevo
+    price: 590
+    category: computers
+    user: pepe
 
-tv:
-  title: Televisión LG 48 pulgadas
-  description: Viene con smart TV funciona perfectamente
-  price: 350
-  category: electronic
+  nvidia:
+    title: Nvidia 3090ti
+    description: Solo usada 3 meses la vendo porque no la uso
+    price: 1500
+    category: computers
+    user: maria
 
-kindle:
-  title: Lector de libros Kindle 2010
-  description: Tiene marcas de uso pero funciona bien
-  price: 35
-  category: electronic
+  ram:
+    title: 16GB Ram DDR4 3200mhz
+    description: Funciona perfectamente
+    price: 95
+    category: computers
+    user: pepe
 
-ipod:
-  title: iPod touch
-  description: Como nuevo a estrenar con su caja
-  price: 175
-  category: electronic
+  renault:
+    title: Renault Clio 2009
+    description: 85000km, 95cv
+    price: 4500
+    category: cars
+    user: paco
 
-harry:
-  title: Colección entera de Harry Potter
-  description: Todos los libros de la saga. Bien cuidados!
-  price: 65
-  category: books
+  seat:
+    title: Seat Panda clásico
+    description: Tan solo 90000km, 75cv. Del año 1980
+    price: 5500
+    category: cars
+    user: pepe
 
-hobbit:
-  title: El hobbit
-  description: Libro en buen estado
-  price: 15
-  category: books
+  michael:
+    title: Vinilo Michael Jackson Thriller
+    description: Como nuevo a estrenar
+    price: 45
+    category: music
+    user: paco
 
-iphone:
-  title: iPhone 13
-  description: Funciona correctamente.
-  price: 400
-  category: mobile
+  queen:
+    title: Vinilo Queen
+    description: Ligeras marcas de uso de los años 80
+    price: 35
+    category: music
+    user: maria
 
-pixel:
-  title: Google Pixel 4
-  description: Le falla la batería
-  price: 100
-  category: mobile
+  tv:
+    title: Televisión LG 48 pulgadas
+    description: Viene con smart TV funciona perfectamente
+    price: 350
+    category: electronic
+    user: pepe
 
-surf:
-  title: Tabla de surf
-  description: Usada dos veces. Como nueva.
-  price: 125
-  category: sports
+  kindle:
+    title: Lector de libros Kindle 2010
+    description: Tiene marcas de uso pero funciona bien
+    price: 35
+    category: electronic
+    user: paco
 
-tennis:
-  title: Raqueta de tenis profesional
-  description: Fabricada en fibra de carbono. Solo un par de arañazos
-  price: 135
-  category: sports
+  ipod:
+    title: iPod touch
+    description: Como nuevo a estrenar con su caja
+    price: 175
+    category: electronic
+    user: pepe
 
-skate:
-  title: Skateboard
-  description: Como nuevo con las ruedas recién cambiadas
-  price: 75
-  category: sports
+  harry:
+    title: Colección entera de Harry Potter
+    description: Todos los libros de la saga. Bien cuidados!
+    price: 65
+    category: books
+    user: maria
+
+  hobbit:
+    title: El hobbit
+    description: Libro en buen estado
+    price: 15
+    category: books
+    user: maria
+
+  iphone:
+    title: iPhone 13
+    description: Funciona correctamente.
+    price: 400
+    category: mobile
+    user: pepe
+
+  pixel:
+    title: Google Pixel 4
+    description: Le falla la batería
+    price: 100
+    category: mobile
+    user: paco
+
+  surf:
+    title: Tabla de surf
+    description: Usada dos veces. Como nueva.
+    price: 125
+    category: sports
+    user: maria
+
+  tennis:
+    title: Raqueta de tenis profesional
+    description: Fabricada en fibra de carbono. Solo un par de arañazos
+    price: 135
+    category: sports
+    user: pepe
+
+  skate:
+    title: Skateboard
+    description: Como nuevo con las ruedas recién cambiadas
+    price: 75
+    category: sports
+    user: paco
